# agent

./: .gitignore  .lint-imports.toml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  Release  SECURITY.md  TECH_DEBT.md  public.key
agent/: Cargo.toml  build.rs
agent/src/: cli.rs  errors.rs  lib.rs  logs.rs  main.rs
agent/src/activity/: mod.rs
agent/src/app/: .covgate  errors.rs  mod.rs  options.rs  run.rs  state.rs  upgrade.rs
agent/src/authn/: .covgate  errors.rs  issue.rs  mod.rs  token.rs  token_mngr.rs
agent/src/cache/: concurrent.rs  dir.rs  entry.rs  errors.rs  file.rs  mod.rs  single_thread.rs
agent/src/cli/: exit_codes.rs  mod.rs
agent/src/cooldown/: mod.rs
agent/src/crud/: config_instance.rs  errors.rs  mod.rs
agent/src/crypt/: .covgate  base64.rs  errors.rs  jwt.rs  mod.rs  rsa.rs
agent/src/deploy/: apply.rs  errors.rs  filesys.rs  fsm.rs  mod.rs  observer.rs
agent/src/errors/: mod.rs
agent/src/events/: errors.rs  hub.rs  mod.rs  model.rs  store.rs
agent/src/filesys/: .covgate  cached_file.rs  dir.rs  errors.rs  file.rs  mod.rs  path.rs
agent/src/http/: .covgate  client.rs  config_instances.rs  deployments.rs  devices.rs  errors.rs  git_commits.rs  mod.rs  prelude.rs  query.rs  releases.rs  request.rs  response.rs  retry.rs
agent/src/installer/: display.rs  errors.rs  install.rs  mod.rs  provision.rs
agent/src/logs/: .covgate  mod.rs
agent/src/models/: config_instance.rs  deployment.rs  device.rs  errors.rs  git_commit.rs  mod.rs  release.rs  status.rs
agent/src/mqtt/: client.rs  device.rs  errors.rs  mod.rs  options.rs
agent/src/network/: mod.rs
agent/src/provision/: entry.rs  errors.rs  mod.rs  provision.rs  reprovision.rs  shared.rs
agent/src/provisioning/: errors.rs  mod.rs  provision.rs  reprovision.rs  shared.rs
agent/src/server/: .covgate  errors.rs  handlers.rs  mod.rs  response.rs  serve.rs  sse.rs  state.rs
agent/src/services/: .covgate  backend.rs  errors.rs  mod.rs
agent/src/services/deployment/: current.rs  get.rs  mod.rs
agent/src/services/device/: .covgate  get.rs  mod.rs  sync.rs
agent/src/services/events/: mod.rs  subscribe.rs
agent/src/services/git_commit/: get.rs
agent/src/services/release/: current.rs  get.rs
agent/src/storage/: .covgate  agent_version.rs  caches.rs  config_instances.rs  deployments.rs  device.rs  errors.rs  git_commits.rs  layout.rs  mod.rs  releases.rs  settings.rs  setup.rs  validation.rs
agent/src/sync/: .covgate  agent_version.rs  config_instances.rs  deployments.rs  errors.rs  mod.rs  syncer.rs
agent/src/telemetry/: mod.rs
agent/src/version/: mod.rs
agent/src/workers/: .covgate  mqtt.rs  poller.rs  token_refresh.rs
agent/tests/: logs_init_double.rs  logs_init_file_only.rs  logs_init_locked.rs  logs_init_reload.rs  logs_init_smoke.rs  logs_init_stdout.rs  mock.rs  mod.rs
agent/tests/activity/: mod.rs
agent/tests/app/: mod.rs  options.rs  run.rs  state.rs  upgrade.rs
agent/tests/authn/: issue.rs  mock.rs  mod.rs  token.rs  token_mngr.rs
agent/tests/cache/: concurrent.rs  dir.rs  errors.rs  file.rs  mod.rs  single_thread.rs
agent/tests/cli/: mod.rs
agent/tests/cooldown/: mod.rs
agent/tests/crud/: config_instance.rs  mod.rs
agent/tests/crypt/: base64.rs  jwt.rs  mod.rs  rsa.rs
agent/tests/deploy/: apply.rs  errors.rs  filesys.rs  fsm.rs  mod.rs  observer.rs
agent/tests/errors/: mod.rs
agent/tests/events/: errors.rs  hub.rs  mod.rs  model.rs  sse.rs  store.rs
agent/tests/filesys/: cached_file.rs  dir.rs  errors.rs  file.rs  mod.rs  path.rs
agent/tests/http/: client.rs  config_instances.rs  deployments.rs  devices.rs  errors.rs  mock.rs  mod.rs  query.rs  request.rs  response.rs  retry.rs
agent/tests/installer/: init_installer_logging.rs  install.rs  mod.rs
agent/tests/logs/: mod.rs
agent/tests/mocks/: error.rs  http_client.rs  mod.rs  mqtt_client.rs  stub_token_manager.rs  systemctl.rs
agent/tests/models/: config_instance.rs  deployment.rs  device.rs  git_commit.rs  harnesses.rs  mod.rs  release.rs
agent/tests/mqtt/: client.rs  device.rs  errors.rs  mock.rs  mod.rs  options.rs  topic.rs
agent/tests/network/: mod.rs
agent/tests/provision/: entry.rs  install.rs  mod.rs
agent/tests/provisioning/: entry.rs  mod.rs  provision.rs  reprovision.rs  shared.rs
agent/tests/server/: errors.rs  handlers.rs  mod.rs  response.rs  sse.rs
agent/tests/services/: backend.rs  backend_stub.rs  errors.rs  mod.rs
agent/tests/services/deployment/: current.rs  get.rs  mod.rs
agent/tests/services/device/: get.rs  sync.rs
agent/tests/services/events/: subscribe.rs
agent/tests/services/git_commit/: get.rs
agent/tests/services/release/: current.rs  get.rs
agent/tests/storage/: agent_version.rs  caches.rs  deployments.rs  device.rs  errors.rs  init.rs  layout.rs  mod.rs  settings.rs  setup.rs  validation.rs
agent/tests/sync/: agent_version.rs  deployments.rs  errors.rs  helpers.rs  mock.rs  mod.rs  syncer.rs
agent/tests/telemetry/: mod.rs
agent/tests/test_utils/: mod.rs  testdata.rs
agent/tests/version/: mod.rs
agent/tests/workers/: mqtt.rs  poller.rs  token_refresh.rs
libs/openapi-client/: Cargo.toml
libs/openapi-client/src/: lib.rs
tools/lint/: .lint-imports.toml  Cargo.toml
tools/lint-asserts/: Cargo.toml
tools/lint-asserts/src/: detect.rs  extract.rs  main.rs
tools/lint/scripts/: check.sh  coverage.sh  covgate.sh  dep-updates.sh  lint.sh  test.sh  update-covgates.sh
tools/lint/src/: checker.rs  classifier.rs  config.rs  fixer.rs  main.rs  parser.rs
tools/lint/src/app/: mod.rs
(+350 files in other folders)
