[package]
name = "miru-agent"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
include = ["src/**/*"]
build = "build.rs"

[features]
test = []

[lints.clippy]
new_without_default = "allow"

[dependencies]
async-trait = { workspace = true }
atomicwrites = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
openapi-client = { workspace = true }
openapi-server = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
rumqttc = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
