[package]
name = "miru-agent"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
include = ["src/**/*"]
build = "build.rs"

[features]
test = []

[lints.clippy]
new_without_default = "allow"

[dependencies]
atomicwrites = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
backend-api = { workspace = true }
device-api = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
rumqttc = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
reqwest = { workspace = true, features = ["json"] }
rumqttd = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
