[package]
name = "openapi-client"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints.rust]
unused_imports = "allow"

[lints.clippy]
derivable_impls = "allow"
empty_docs = "allow"
too_many_arguments = "allow"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }