[workspace]

[package]
name = "lint-imports"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3"
